# rp2350-freeRTOS-tests

./: CMakeLists.txt  compile.sh  notes-rp2350.txt
crc_crc16/crc_crc16_lib/: crc.c
freertos-RPi/: FreeRTOSConfig.h  location-freertos-2350.txt
klt/: CMakeLists.txt
openjpeg/: CMakeLists-interface.txt  CMakeLists.txt
openjpeg/openjpeg-lib/: rd-wr-ops.c.rev1
